--- a/address_book/templates/base.html
+++ b/address_book/templates/base.html
@@ -40,7 +40,22 @@
         </div>
       </div>
     </nav>
-    <div class="container">{% block content %} {% endblock %}</div>
+ 
+    <div class="container">
+      
+           
+      {% if messages %}
+        {% for message in messages %}
+          <div class="aler alert-warning alert-dismissible" role="alert">
+            <button class="close" data-dismiss="alert">
+              <small><sup>x</sup></small>
+            </button>
+            {{ message }}
+          </div>
+          {% endfor %}
+          {% endif %}
+          
+          {% block content %} {% endblock %}</div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
