--- a/address_book/templates/add_address.html
+++ b/address_book/templates/add_address.html
@@ -1,41 +1,48 @@
 {% extends 'base.html' %}
 
-
 {% block content %}
-	<h1>Add Address...</h1>
-<br/>
-	<form method="POST">
-		{% csrf_token %}
-
-	  <div class="form-group">
-	    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Full Name" name="name">
-	  </div>
-      <br/>
-	  <div class="form-group">
-	    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email Addres" name="email">
-	  </div>
-	  <br/>
-	  <div class="form-group">
-	    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Phone Number" name="phone">
-	  </div>
-      <br/>
-	  <div class="form-group">
-	    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Address" name="address">
-	  </div>
-      <br/>
-	  <div class="form-group">
-	    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="City" name="city">
-	  </div>
-      <br/>
-	  <div class="form-group">
-	    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="State" name="state">
-	  </div>
-      <br/>
-	  <div class="form-group">
-	    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Zipcode" name="zipcode">
-	  </div>
-<br/>
-	  <button type="submit" class="btn btn-secondary">Add Address</button>
-	</form>
-
+<div class="container mt-5">
+    <h1 class="mb-4">Add Address</h1>
+    <form method="POST" class="needs-validation" novalidate>
+        {% csrf_token %}
+        
+        <div class="mb-3">
+            <label for="nameInput" class="form-label">Full Name</label>
+            <input type="text" class="form-control" id="nameInput" name="name" placeholder="Full Name" required>
+        </div>
+        
+        <div class="mb-3">
+            <label for="emailInput" class="form-label">Email Address</label>
+            <input type="email" class="form-control" id="emailInput" name="email" placeholder="Email Address" required>
+        </div>
+        
+        <div class="mb-3">
+            <label for="phoneInput" class="form-label">Phone Number</label>
+            <input type="text" class="form-control" id="phoneInput" name="phone" placeholder="Phone Number" required>
+        </div>
+        
+        <div class="mb-3">
+            <label for="addressInput" class="form-label">Address</label>
+            <input type="text" class="form-control" id="addressInput" name="address" placeholder="Address" required>
+        </div>
+        
+        <div class="mb-3">
+            <label for="cityInput" class="form-label">City</label>
+            <input type="text" class="form-control" id="cityInput" name="city" placeholder="City" required>
+        </div>
+        
+        <div class="mb-3">
+            <label for="stateInput" class="form-label">State</label>
+            <input type="text" class="form-control" id="stateInput" name="state" placeholder="State" required>
+        </div>
+        
+        <div class="mb-3">
+            <label for="zipcodeInput" class="form-label">Zipcode</label>
+            <input type="text" class="form-control" id="zipcodeInput" name="zipcode" placeholder="Zipcode" required>
+        </div>
+        
+        <button type="submit" class="btn btn-primary">Add Address</button>
+    </form>
+</div>
 {% endblock %}
+
