--- a/address_book/templates/edit.html
+++ b/address_book/templates/edit.html
@@ -1,56 +1,56 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div class="container mt-5">
+    <h2>Edit Address</h2>
+    <br/>
 
-<h2>Edit Address</h2>
-<br/>
+    {% if get_address %}
+    <form method="POST">
+        {% csrf_token %}
+        <div class="mb-3">
+            <label for="nameInput" class="form-label">Full Name</label>
+            <input type="text" class="form-control" id="nameInput" name="name" value="{{ get_address.name }}" required>
+        </div>
 
-{% if get_address %}
-	<form method="POST">
-	{% csrf_token %}
-<div class="form-group"> 
-   	<input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" value="{{ get_address.name }}" name="name">
-</div>
-<br/>
-<div class="form-group">
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" value="{{ get_address.email }}" name="email">
-</div>
-<br/>
-<div class="form-group">
-    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" value="{{ get_address.phone }}" name="phone">
-</div>
-<br/>
-<div class="form-group">
-    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" value="{{ get_address.address }}" name="address">
-</div>
-<br/>
-<div class="form-group">
-    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" value="{{ get_address.city }}" name="city">
-</div>
-<br/>
-<div class="form-group">
-    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" value="{{ get_address.state }}" name="state">
-</div>
-<br/>
-<div class="form-group">
-    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" value="{{ get_address.zipcode }}" name="zipcode">
-</div>
-<br/>
-<div class="form-group">
-    <input type="hidden" value="{{ get_address.id }}" name="id">
-</div>
-  
- <br/>
-  <button type="submit" class="btn btn-secondary">Edit Address</button>
-</form>
-<br/>
-<br/>
-<form method="POST" action='{% url 'delete' get_address.id %}'>
-	{% csrf_token %}
-	<input type="hidden" value="{{ get_address.id }}" name="id">
-	<button type="submit" class="btn btn-secondary">Delete Address</button>
-</form>
+        <div class="mb-3">
+            <label for="emailInput" class="form-label">Email Address</label>
+            <input type="email" class="form-control" id="emailInput" name="email" value="{{ get_address.email }}" required>
+        </div>
 
+        <div class="mb-3">
+            <label for="phoneInput" class="form-label">Phone Number</label>
+            <input type="text" class="form-control" id="phoneInput" name="phone" value="{{ get_address.phone }}" required>
+        </div>
 
-{% endif %}
+        <div class="mb-3">
+            <label for="addressInput" class="form-label">Address</label>
+            <input type="text" class="form-control" id="addressInput" name="address" value="{{ get_address.address }}" required>
+        </div>
+
+        <div class="mb-3">
+            <label for="cityInput" class="form-label">City</label>
+            <input type="text" class="form-control" id="cityInput" name="city" value="{{ get_address.city }}" required>
+        </div>
+
+        <div class="mb-3">
+            <label for="stateInput" class="form-label">State</label>
+            <input type="text" class="form-control" id="stateInput" name="state" value="{{ get_address.state }}" required>
+        </div>
+
+        <div class="mb-3">
+            <label for="zipcodeInput" class="form-label">Zipcode</label>
+            <input type="text" class="form-control" id="zipcodeInput" name="zipcode" value="{{ get_address.zipcode }}" required>
+        </div>
+
+        <button type="submit" class="btn btn-primary">Save Changes</button>
+    </form>
+    <br/>
+    <form method="POST" action='{% url 'delete' get_address.id %}'>
+        {% csrf_token %}
+        <input type="hidden" value="{{ get_address.id }}" name="id">
+        <button type="submit" class="btn btn-danger">Delete Address</button>
+    </form>
+    {% endif %}
+</div>
 {% endblock %}
